<!--
  ~ Copyright 2019 Bytabit AB
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name" translatable="false">Testnet Bytabit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    // menu bar and nav drawer

    <string name="menu_offer_list">Offers</string>
    <string name="menu_trade_list">Trades</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_payment_list">Payment</string>
    <string name="menu_badge_list">Badges</string>
    <string name="menu_help">Help</string>

    // offers

    <string name="offer_header">Offer</string>
    <string name="offer_details_header">Offer Details</string>
    <string name="offer_add_header">Add Offer</string>

    <string name="offer_type_label">Type</string>
    <string name="offer_currency_label">Currency</string>
    <string name="offer_payment_method_label">Payment Method</string>
    <string name="offer_min_trade_amt_label">Min Amt</string>
    <string name="offer_max_trade_amt_label">Max Amt</string>
    <string name="offer_price_per_btc_label">Price Per BTC</string>

    <string name="offer_currency_amt_label">Currency Amt</string>
    <string name="offer_btc_amt_label">BTC Amt</string>

    <string name="offer_add_button_label">ADD</string>
    <string name="offer_remove_button_label">REMOVE</string>
    <string name="offer_buy_button_label">BUY</string>
    <string name="offer_sell_button_label">SELL</string>

    // wallet

    <string name="wallet_deposit_header">Wallet Deposit</string>
    <string name="wallet_deposit_share_button_label">SHARE</string>
    <string name="wallet_deposit_btc_deposit_address_label">BTC Deposit Address</string>

    <string name="wallet_restore_header">Restore Wallet</string>
    <string name="wallet_restore_button_label">RESTORE</string>
    <string name="wallet_restore_word1">Word 1</string>
    <string name="wallet_restore_word2">Word 2</string>
    <string name="wallet_restore_word3">Word 3</string>
    <string name="wallet_restore_word4">Word 4</string>
    <string name="wallet_restore_word5">Word 5</string>
    <string name="wallet_restore_word6">Word 6</string>
    <string name="wallet_restore_word7">Word 7</string>
    <string name="wallet_restore_word8">Word 8</string>
    <string name="wallet_restore_word9">Word 9</string>
    <string name="wallet_restore_word10">Word 10</string>
    <string name="wallet_restore_word11">Word 11</string>
    <string name="wallet_restore_word12">Word 12</string>
    <string name="wallet_restore_first_used_date">First Used Date</string>
    <string name="wallet_restore_date_format">yyyy-MM-dd</string>

    <string name="wallet_info_header">Wallet Information</string>
    <string name="wallet_info_seed_words">Seed Words</string>
    <string name="wallet_info_profile_pubkey">Profile PubKey</string>

    // payments

    <string name="payment_details_header">Payment Details</string>

    <string name="payment_currency_label">Currency</string>
    <string name="payment_method_label">Payment Method</string>
    <string name="payment_details_label">Payment Details</string>

    <string name="payment_add_button_label">ADD</string>
    <string name="payment_remove_button_label">REMOVE</string>

    // badges

    <string name="badges_buy_header">Buy Badge</string>

    <string name="badge_type_label">Badge Type</string>
    <string name="badge_currency_label">Currency</string>
    <string name="badge_price_label">Price</string>
    <string name="badge_validfrom_label">Valid From</string>
    <string name="badge_validto_label">Valid To</string>

    <string name="badge_buy_button_label">BUY</string>
    <string name="offer_list_mine_button">MINE</string>

    //trades
    <string name="trade_details_header">Trade Details</string>

    <string name="trade_status_label">Trade Status</string>
    <string name="trade_role_label">Trade Role</string>
    <string name="trade_payment_method_label">Payment Method</string>
    <string name="trade_payment_amt_label">Payment Amt</string>
    <string name="trade_payment_details_label">Payment Details</string>
    <string name="trade_payment_ref_label">Payment Reference</string>
    <string name="trade_purchased_amt_label">Purchased Amt</string>
    <string name="trade_tx_fee_label">TX Fee Per KB</string>
    <string name="trade_price_label">Price per BTC</string>
    <string name="trade_payout_reason_label">Payout Reason</string>
    <string name="trade_arbitrate_reason_label">Arbitrate Reason</string>

    <string name="trade_fund_escrow_button_label">FUND ESCROW</string>
    <string name="trade_payment_sent_button_label">PAYMENT SENT</string>
    <string name="trade_payment_received_button_label">PAYMENT RECEIVED</string>
    <string name="trade_cancel_button_label">CANCEL</string>
    <string name="trade_arbitrate_button_label">ARBITRATE</string>
    <string name="trade_refund_seller_button_label">REFUND SELLER</string>
    <string name="trade_payout_buyer_button_label">PAYOUT BUYER</string>
    <string name="cannot_launch_app">\"Bytabit cannot be run on this device</string>

    // test data

    <string-array name="test_currencies_array">
        <item>SEK</item>
        <item>EUR</item>
        <item>USD</item>
    </string-array>

    <string-array name="test_payment_methods_array">
        <item>Swish</item>
        <item>SEPA</item>
        <item>Zelle</item>
    </string-array>

    <string-array name="test_badge_types_array">
        <item>OFFER_MAKER</item>
    </string-array>

    <string-array name="test_offer_types_array">
        <item>BUY</item>
        <item>SELL</item>
    </string-array>

    <string-array name="test_wallet_restore_array">
        <item>abandon</item>
        <item>ability</item>
        <item>able</item>
        <item>about</item>
        <item>above</item>
        <item>absent</item>
        <item>absorb</item>
        <item>abstract</item>
        <item>absurd</item>
        <item>abuse</item>
    </string-array>

</resources>
