<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019 Bytabit AB
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/ic_shop_black_24dp"
            android:title="@string/menu_offer_list" />
        <item
            android:id="@+id/nav_trades"
            android:icon="@drawable/ic_swap_vertical_circle_black_24dp"
            android:title="@string/menu_trade_list" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_account_balance_wallet_black_24dp"
            android:title="@string/menu_wallet" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_account_balance_black_24dp"
            android:title="@string/menu_payment_list" />
        <item
            android:id="@+id/nav_badges"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/menu_badge_list" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/menu_help" />
    </group>

</menu>
